<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/exerciseDetailsBackground"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@android:color/holo_blue_light"
    android:clickable="true"
    android:focusable="true"
    android:onClick="exerciseDetailsClicked">

    <LinearLayout
        android:id="@+id/exerciseDetailsLayout"
        android:layout_above="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_blue_light"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/repsView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/weightView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:orientation="vertical"
        android:background="@android:color/darker_gray"
        android:visibility="visible"/>
</RelativeLayout>