...
    <string name="arrow_right_thick">arrow_right_thick</string>
    <string name="arrow_left_thick">arrow_left_thick</string>
    <string name="changeWorkoutName">Change workout name:</string>
    <string name="EditMode">Edit mode</string>
    <string name="SaveButton">Save</string>
    <string name="ClearButton">Clear</string>
    <string name="ChangeButton">Change</string>
    <string name="DeleteButton">Delete</string>
    <string name="Kg">%1s kg</string>
    <string name="NoDataAvailable">No data available</string>

    <string name="Reps">Reps: %1$s</string>
    <string name="Weight">Weight: %1$s</string>
...
